nueva propuesta avances...

--- a/notificaciones/nuevanoti.html
+++ b/notificaciones/nuevanoti.html
@@ -26,135 +26,137 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="col-md-12 p-l-0">
-      <div
-        class="col-md-2 bg-primary p-y-2 p-x-2 m-l-0"
-        style="min-width: fit-content; width: 280px; height: 100vh"
-      >
-        <div class="row">
-          <h1 class="h4 p-x-2">
-            <i class="fa fa-inbox" style="font-size: 0.75em"></i> Noti.mi
-          </h1>
-        </div>
-        <div class="row">
-          <ul class="nav">
-            <li class="m-y-1">
-              <a href="/index.html"
-                ><i
-                  class="icono-arg-casa-negativo"
-                  style="font-size: 0.75em"
-                ></i
-                ><strong class="p-l-1">Dashboard</strong></a
-              >
-            </li>
-            <li class="m-y-1">
-              <a href="notificaciones.html"
-                ><i
-                  class="icono-arg-alarma-negativo"
-                  style="font-size: 0.75em"
-                ></i
-                ><strong class="p-l-1">Notificaciones</strong></a
-              >
-            </li>
-            <li class="m-y-1">
-              <a href="metricas.html"
-                ><i class="fa fa-signal" style="font-size: 0.75em"></i
-                ><strong class="p-l-1">Métricas</strong></a
-              >
-            </li>
-            <li class="m-y-1">
-              <a href="configuracion.html"
-                ><i class="fa fa-cog" style="font-size: 0.75em"></i
-                ><strong class="p-l-1">Configuración</strong></a
-              >
-            </li>
-          </ul>
-        </div>
-        <div class="row m-y-6 p-y-10 vh-100">
-          <p>Nombre Apellido</p>
-        </div>
-      </div>
-      <div class="col-md-9 p-l-3 p-y-1 p-x-2">
-        <h1 class="h3 p-x-2 m-b-3">
-          <i class="fa fa-chevron-left" style="font-size: 0.75em"></i> Crear
-          nueva notificación
-        </h1>
-        <div class="row p-y-2 p-x-2 m-b-1">
-          <p class="p-x-1">¿Qué tipo de notificación querés crear?</p>
-          <div class="col-md-4">
-            <a class="panel panel-default" href="nuevapush.html">
-              <div class="panel-body bg-gray p-y-2">
-                <div class="media">
-                  <div class="text-center hidden-xs panel-frame-fix-icono">
-                    <i class="fa fa-plus-circle fa-2x text-arg-azul"></i>
-                  </div>
-                  <div class="media-body">
-                    <p class="text-center"><strong>Push</strong></p>
-                    <div class="text-muted text-center">
-                      <p class="text-muted">
-                        <small
-                          >Mensaje estático que se visualiza en el Home o
-                          sección de la app.</small
-                        >
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-4">
-            <a class="panel panel-default" href="nuevanovedad.html">
-              <div class="panel-body bg-gray p-y-2">
-                <div class="media">
-                  <div class="text-center hidden-xs panel-frame-fix-icono">
-                    <i class="fa fa-plus-circle fa-2x text-arg-azul"></i>
-                  </div>
-                  <div class="media-body">
-                    <p class="text-center"><strong>Novedad</strong></p>
-                    <div class="text-muted text-center">
-                      <p class="text-muted">
-                        <small
-                          >Mensaje estático que se visualiza en el Home o
-                          sección de la app.</small
-                        >
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-4">
-            <a class="panel panel-default" href="nuevasplash.html">
-              <div class="panel-body bg-gray p-y-2">
-                <div class="media">
-                  <div class="text-center hidden-xs panel-frame-fix-icono">
-                    <i class="fa fa-plus-circle fa-2x text-arg-azul"></i>
-                  </div>
-                  <div class="media-body">
-                    <p class="text-center"><strong>Splash</strong></p>
-                    <div class="text-muted text-center">
-                      <p class="text-muted">
-                        <small
-                          >Mensaje estático que se visualiza en el Home o
-                          sección de la app.</small
-                        >
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        <button
-          type="button"
-          class="btn btn-default btn-tag"
-          onclick="location.replace('../notificaciones.html')"
+    <div class="container-fluid">
+      <div class="col-md-12 p-l-0">
+        <div
+          class="col-md-2 bg-primary p-y-2 p-x-2 m-l-0"
+          style="min-width: fit-content; width: 280px; height: 100vh"
         >
-          Volver
-        </button>
+          <div class="row">
+            <h1 class="h4 p-x-2">
+              <i class="fa fa-inbox" style="font-size: 0.75em"></i> Noti.mi
+            </h1>
+          </div>
+          <div class="row">
+            <ul class="nav">
+              <li class="m-y-1">
+                <a href="/index.html"
+                  ><i
+                    class="icono-arg-casa-negativo"
+                    style="font-size: 0.75em"
+                  ></i
+                  ><strong class="p-l-1">Dashboard</strong></a
+                >
+              </li>
+              <li class="m-y-1">
+                <a href="notificaciones.html"
+                  ><i
+                    class="icono-arg-alarma-negativo"
+                    style="font-size: 0.75em"
+                  ></i
+                  ><strong class="p-l-1">Notificaciones</strong></a
+                >
+              </li>
+              <li class="m-y-1">
+                <a href="metricas.html"
+                  ><i class="fa fa-signal" style="font-size: 0.75em"></i
+                  ><strong class="p-l-1">Métricas</strong></a
+                >
+              </li>
+              <li class="m-y-1">
+                <a href="configuracion.html"
+                  ><i class="fa fa-cog" style="font-size: 0.75em"></i
+                  ><strong class="p-l-1">Configuración</strong></a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="row m-y-6 p-y-10 vh-100">
+            <p>Nombre Apellido</p>
+          </div>
+        </div>
+        <div class="col-md-9 p-l-3 p-y-1 p-x-2">
+          <h1 class="h3 p-x-2 m-b-3">
+            <i class="fa fa-chevron-left" style="font-size: 0.75em"></i> Crear
+            nueva notificación
+          </h1>
+          <div class="row p-y-2 p-x-2 m-b-1">
+            <p class="p-x-1">¿Qué tipo de notificación querés crear?</p>
+            <div class="col-md-4">
+              <a class="panel panel-default" href="nuevapush.html">
+                <div class="panel-body bg-gray p-y-2">
+                  <div class="media">
+                    <div class="text-center hidden-xs panel-frame-fix-icono">
+                      <i class="fa fa-plus-circle fa-2x text-arg-azul"></i>
+                    </div>
+                    <div class="media-body">
+                      <p class="text-center"><strong>Push</strong></p>
+                      <div class="text-muted text-center">
+                        <p class="text-muted">
+                          <small
+                            >Mensaje estático que se visualiza en el Home o
+                            sección de la app.</small
+                          >
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-md-4">
+              <a class="panel panel-default" href="nuevanovedad.html">
+                <div class="panel-body bg-gray p-y-2">
+                  <div class="media">
+                    <div class="text-center hidden-xs panel-frame-fix-icono">
+                      <i class="fa fa-plus-circle fa-2x text-arg-azul"></i>
+                    </div>
+                    <div class="media-body">
+                      <p class="text-center"><strong>Novedad</strong></p>
+                      <div class="text-muted text-center">
+                        <p class="text-muted">
+                          <small
+                            >Mensaje estático que se visualiza en el Home o
+                            sección de la app.</small
+                          >
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-md-4">
+              <a class="panel panel-default" href="nuevasplash.html">
+                <div class="panel-body bg-gray p-y-2">
+                  <div class="media">
+                    <div class="text-center hidden-xs panel-frame-fix-icono">
+                      <i class="fa fa-plus-circle fa-2x text-arg-azul"></i>
+                    </div>
+                    <div class="media-body">
+                      <p class="text-center"><strong>Splash</strong></p>
+                      <div class="text-muted text-center">
+                        <p class="text-muted">
+                          <small
+                            >Mensaje estático que se visualiza en el Home o
+                            sección de la app.</small
+                          >
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <button
+            type="button"
+            class="btn btn-default btn-tag"
+            onclick="location.replace('../notificaciones.html')"
+          >
+            Volver
+          </button>
+        </div>
       </div>
     </div>
   </body>
