--- a/notificaciones/nuevanovedad.html
+++ b/notificaciones/nuevanovedad.html
@@ -11,133 +11,135 @@
     <title>Document</title>
 </head>
 <body>
-    <div
-    class="col-md-2 bg-primary p-y-2 p-x-2 m-l-0"
-    style="min-width: fit-content; width: 280px; height: 100vh"
-  >
-    <div class="row">
-      <h1 class="h4 p-x-2">
-        <i class="fa fa-inbox" style="font-size: 0.75em"></i> Noti.mi
-      </h1>
+  <div class="container-fluid">
+    <div class="col-md-12">
+      <div
+      class="col-md-2 bg-primary p-y-2 p-x-2 m-l-0"
+      style="min-width: fit-content; width: 280px; height: 100vh"
+    >
+      <div class="row">
+        <h1 class="h4 p-x-2">
+          <i class="fa fa-inbox" style="font-size: 0.75em"></i> Noti.mi
+        </h1>
+      </div>
+      <div class="row">
+        <ul class="nav">
+          <li class="m-y-1">
+            <a href="/index.html"
+              ><i
+                class="icono-arg-casa-negativo"
+                style="font-size: 0.75em"
+              ></i
+              ><strong class="p-l-1">Dashboard</strong></a
+            >
+          </li>
+          <li class="m-y-1">
+            <a href="notificaciones.html"
+              ><i
+                class="icono-arg-alarma-negativo"
+                style="font-size: 0.75em"
+              ></i
+              ><strong class="p-l-1">Notificaciones</strong></a
+            >
+          </li>
+          <li class="m-y-1">
+            <a href="metricas.html"
+              ><i class="fa fa-signal" style="font-size: 0.75em"></i
+              ><strong class="p-l-1">Métricas</strong></a
+            >
+          </li>
+          <li class="m-y-1">
+            <a href="configuracion.html"
+              ><i class="fa fa-cog" style="font-size: 0.75em"></i
+              ><strong class="p-l-1">Configuración</strong></a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="row m-y-6 p-y-10 vh-100">
+        <p>Nombre Apellido</p>
+      </div>
     </div>
-    <div class="row">
-      <ul class="nav">
-        <li class="m-y-1">
-          <a href="/index.html"
-            ><i
-              class="icono-arg-casa-negativo"
-              style="font-size: 0.75em"
-            ></i
-            ><strong class="p-l-1">Dashboard</strong></a
-          >
-        </li>
-        <li class="m-y-1">
-          <a href="notificaciones.html"
-            ><i
-              class="icono-arg-alarma-negativo"
-              style="font-size: 0.75em"
-            ></i
-            ><strong class="p-l-1">Notificaciones</strong></a
-          >
-        </li>
-        <li class="m-y-1">
-          <a href="metricas.html"
-            ><i class="fa fa-signal" style="font-size: 0.75em"></i
-            ><strong class="p-l-1">Métricas</strong></a
-          >
-        </li>
-        <li class="m-y-1">
-          <a href="configuracion.html"
-            ><i class="fa fa-cog" style="font-size: 0.75em"></i
-            ><strong class="p-l-1">Configuración</strong></a
-          >
-        </li>
-      </ul>
-    </div>
-    <div class="row m-y-6 p-y-10 vh-100">
-      <p>Nombre Apellido</p>
+    <div class="col-md-9 m-t-2">
+                  <div class="col-md-6 p-x-3">
+                      <h1 class="h4 p-x-0 m-b-0">Crear nueva novedad</h1>
+                      <hr>
+                      <form class="p-x-1">
+                                  <div class="row">
+                                      <div class="form-item webform-component webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group">
+                                          <label class="control-label">Nombre de la novedad</label>
+                                          <input class="form-control form-text required" type="text" placeholder="Ingresar el nombre de la notificación">
+                                      </div>
+                                  </div>
+                                  <div class="row">
+                                      <div class="form-item webform-component webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group">
+                                          <label class="control-label">Campaña</label>
+                                          <input class="form-control form-text required" type="text" placeholder="Seleccioná la campaña">
+                                      </div>
+                                  </div>
+                              <hr>
+                                  <div class="row">
+                                      <div class="form-item webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group">
+                                          <label>Título</label>
+                                          <input class="form-control form-text required" type="text" placeholder="Prevení el dengue">
+                                          <p class="help-block error">Extensión máxima: 65 carácteres</p>
+                                      </div>
+                                  </div>
+                                  <div class="row">
+                                      <div class="class=form-item webform-component webform-component-textarea webform-component--textarea form-group form-item form-item-submitted-textarea form-type-textarea form-group">
+                                          <label class="control-label">Cuerpo del mensaje</label>
+                                          <div class="form-textarea-wrapper resizable textarea-processed resizable-textarea">
+                                              <textarea class="form-control form-textarea required" cols="30" rows="2" placeholder="Ingresar el cuerpo del mensaje"></textarea>
+                                          </div>
+                                              <p class="help-block error">Extensión máxima: 65 carácteres</p>
+                                      </div>
+                                  </div>
+                                  <div class="row">
+                                      <div class="form-item webform-component webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group">
+                                          <label class="control-label">Link</label>
+                                          <input class="form-control form-text required">
+                                      </div>
+                                  </div>     
+                                  <div class="row">
+                                      <div class="form-group p-x-0 item-form">
+                                          <label>Fecha de inicio</label>
+                                          <input type="date" class="form-control">
+                                      </div>
+                                  </div>
+                                  <div class="row">
+                                      <div class="form-group p-x-0 item-form">
+                                          <label>Fecha de fin</label>
+                                          <input type="date" class="form-control">
+                                      </div>
+                                  </div>    
+                                  <fieldset>
+                                      <div class="form-group p-x-0 item-form">
+                                          <div class="checkbox">
+                                              <label>
+                                                  <input type="checkbox">Notificación destacada
+                                              </label>
+                                          </div>  
+                                      </div>
+                                  </fieldset>                 
+                                  <div class="row p-x-0">
+                                      <div class="form-group p-x-0 item-form">
+                                          <label>Provincia</label>
+                                          <select class="form-control">
+                                          <option selected="">Opción</option>
+                                      </div>
+                                  </div>
+                      </form>
+                  </div>
+                  <div class="row">
+                      <div class="col-md-8 p-x-1 m-y-4">
+                          <button type="button" class="btn btn-success m-r-2" onclick="location.replace('../componentes/segmentacion.html')">Siguiente</button>
+                          <button type="button" onclick="location.replace('../index.html')" class="btn btn-danger">Cancelar</button>
+                      </div>
+                  </div>
+          </div>
+          </div>
+      </div>
     </div>
   </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 m-t-2">
-                <div class="col-md-4 p-x-0">
-                    <h1 class="h4 p-x-0 m-b-0">Crear nueva novedad</h1>
-                    <hr>
-                    <form class="p-x-1">
-                                <div class="row">
-                                    <div class="form-item webform-component webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group">
-                                        <label class="control-label">Nombre de la novedad</label>
-                                        <input class="form-control form-text required" type="text" placeholder="Ingresar el nombre de la notificación">
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="form-item webform-component webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group">
-                                        <label class="control-label">Campaña</label>
-                                        <input class="form-control form-text required" type="text" placeholder="Seleccioná la campaña">
-                                    </div>
-                                </div>
-                            <hr>
-                                <div class="row">
-                                    <div class="form-item webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group">
-                                        <label>Título</label>
-                                        <input class="form-control form-text required" type="text" placeholder="Prevení el dengue">
-                                        <p class="help-block error">Extensión máxima: 65 carácteres</p>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="class=form-item webform-component webform-component-textarea webform-component--textarea form-group form-item form-item-submitted-textarea form-type-textarea form-group">
-                                        <label class="control-label">Cuerpo del mensaje</label>
-                                        <div class="form-textarea-wrapper resizable textarea-processed resizable-textarea">
-                                            <textarea class="form-control form-textarea required" cols="30" rows="2" placeholder="Ingresar el cuerpo del mensaje"></textarea>
-                                        </div>
-                                            <p class="help-block error">Extensión máxima: 65 carácteres</p>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="form-item webform-component webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group">
-                                        <label class="control-label">Link</label>
-                                        <input class="form-control form-text required">
-                                    </div>
-                                </div>     
-                                <div class="row">
-                                    <div class="form-group p-x-0 item-form">
-                                        <label>Fecha de inicio</label>
-                                        <input type="date" class="form-control">
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="form-group p-x-0 item-form">
-                                        <label>Fecha de fin</label>
-                                        <input type="date" class="form-control">
-                                    </div>
-                                </div>    
-                                <fieldset>
-                                    <div class="form-group p-x-0 item-form">
-                                        <div class="checkbox">
-                                            <label>
-                                                <input type="checkbox">Notificación destacada
-                                            </label>
-                                        </div>  
-                                    </div>
-                                </fieldset>                 
-                                <div class="row p-x-0">
-                                    <div class="form-group p-x-0 item-form">
-                                        <label>Provincia</label>
-                                        <select class="form-control">
-                                        <option selected="">Opción</option>
-                                    </div>
-                                </div>
-                    </form>
-                </div>
-                <div class="row">
-                    <div class="col-md-8 p-x-1 m-y-4">
-                        <button type="button" class="btn btn-success m-r-2" onclick="location.replace('../componentes/segmentacion.html')">Siguiente</button>
-                        <button type="button" onclick="location.replace('../index.html')" class="btn btn-danger">Cancelar</button>
-                    </div>
-                </div>
-        </div>
-        </div>
-    </div>
 </body>
 </html>
